[package]
name = "nix-check-deps"
version = "0.1.0"
edition = "2021"
authors = [ "Grimmauld <grimmauld@grimmauld.de>" ]
description = "Search for config files in XDG_CONFIG_DIRS"
license-file = "LICENSE"

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
clap = {version="4.5.4", features = ["derive"]}
clap-stdin = "0.6.0"
grep = "0.3.2"
ignore = "0.4.23"
regex = "1.11.1"
tempfile = "3.19.1"
flate2 = "1.1.0"
tar = "0.4.44"
xz = "0.1.0"
